--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "eslint": "8.33.0",
     "eslint-config-next": "14.1.4",
     "framer-motion": "^11.0.20",
+    "lucide-react": "^0.365.0",
     "next": "14.1.4",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "18.2.0",
     "react-modal-video": "^2.0.0",
     "tailwind-merge": "^2.2.2"
