--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@prisma/client": "^5.12.1",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "class-variance-authority": "^0.7.0",
@@ -25,7 +26,8 @@
     "react-day-picker": "^8.10.0",
     "react-dom": "18.2.0",
     "react-modal-video": "^2.0.0",
-    "tailwind-merge": "^2.2.2"
+    "tailwind-merge": "^2.2.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
@@ -34,6 +36,7 @@
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.2",
+    "prisma": "^5.12.1",
     "tailwindcss": "^3.2.4",
     "typescript": "^5.0.4"
   }
