--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://6t6wpp125qcih699rq6r:Y@shgreat29@aws.connect.psdb.cloud/chathub?sslaccept=strict"
+DATABASE_URL='postgres://postgres.phglxkkpsfyflznnwwam:77736@gmail.com@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres'
