--- a/.env
+++ b/.env
@@ -4,4 +4,11 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL='postgres://postgres.phglxkkpsfyflznnwwam:77736@gmail.com@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres'
+//DATABASE_URL='postgres://postgres.phglxkkpsfyflznnwwam:77736@gmail.com@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres'
+//DATABASE_URL='postgres://postgres.vgdhinzfbolqfxodqmkg:HHpkk8kdu4q@@@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres'
+//DATABASE_URL='postgres://postgres.mwaorsbgnwtnalaeafjh:HHpkk8kdu4q@@@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres'
+//DATABASE_URL="postgres://postgres.negdfdasgvkczfyxhgqt:HHpkk8kdu4q@@@aws-0-ap-south-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
+
+//DATABASE_URL="postgres://postgres.albvnmtffdlcyrjrrsjq:77736@gmail.com@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres"
+//DATABASE_URL="postgres://postgres.aucnpakjuxmghzocrxul:77736@gmail.com@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres"
+DATABASE_URL="postgres://postgres.albvnmtffdlcyrjrrsjq:77736@gmail.com@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres"
