--- a/package.json
+++ b/package.json
@@ -10,21 +10,25 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
-    "@prisma/client": "^5.12.1",
+    "@prisma/client": "^5.14.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
-    "eslint": "8.33.0",
-    "eslint-config-next": "14.1.4",
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.2.3",
     "framer-motion": "^11.0.20",
     "lucide-react": "^0.365.0",
-    "next": "14.1.4",
+    "next": "14.2.3",
     "next-themes": "^0.2.1",
-    "react": "18.2.0",
+    "react": "18.3.1",
     "react-day-picker": "^8.10.0",
-    "react-dom": "18.2.0",
+    "react-dom": "18.3.0",
+    "react-dom@18.3.0": "link:types/react-dom@18.3.0",
     "react-modal-video": "^2.0.0",
     "tailwind-merge": "^2.2.2",
     "usehooks-ts": "^3.1.0",
@@ -37,7 +41,7 @@
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.2",
-    "prisma": "^5.12.1",
+    "prisma": "^5.14.0",
     "tailwindcss": "^3.2.4",
     "typescript": "^5.0.4"
   }
